# Semillero_Maratones_2023

./: .gitignore  .gitmodules  README.md
Sesion_01_032023/: environment.yml  pyproject.toml  sesion_01_032023.ipynb  sesion_01_032023.slides.html
Sesion_01_032023/entradas/c++/: EOF.cpp  n_casos.cpp
Sesion_01_032023/entradas/java/: EOF.java  n_cases.java
Sesion_01_032023/entradas/python/: funciones_python.py  read_lines_out1.txt
Sesion_01_032023/problemas/flip/: flip.py
Sesion_01_032023/problemas/moscow_dream/: moscowdream.cpp  moscowdream.java  moscowdream.py
Sesion_01_032023/problemas/moscow_dream/cases/: In1.txt
Sesion_01_032023/problemas/write_it_down/: write_it_down.py
Sesion_01_032023/problemas/write_it_down/cases/expected_output/: Out1.txt  Out2.txt
Sesion_01_032023/problemas/write_it_down/cases/input/: In2.txt
Sesion_01_032023/problemas/write_it_down/cases/output/: Out2.txt
Sesion_02_032023/algoritmos/busqueda_binaria/: busqueda_binaria_iterativa.py
